--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#001FCA"
     tools:context="com.example.employee_app.view.EmployeeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
