--- a/app/src/main/res/layout/get_rv_item.xml
+++ b/app/src/main/res/layout/get_rv_item.xml
@@ -4,30 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_margin="10dp"
+    android:background="#BDC6FB"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/idtextView"
         android:layout_width="151dp"
         android:layout_height="35dp"
-        android:padding="5dp"
-        android:background="#F1CBCB"
-        android:textColor="@color/black"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="#F1CBCB"
+        android:padding="5dp"
 
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_textView"
         android:layout_width="151dp"
         android:layout_height="35dp"
-        android:padding="5dp"
-        android:background="#F1CBCB"
-        android:textColor="@color/black"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:background="#F1CBCB"
+        android:padding="5dp"
+        android:textColor="@color/black"
 
         app:layout_constraintEnd_toEndOf="@+id/idtextView"
         app:layout_constraintHorizontal_bias="1.0"
@@ -38,14 +39,15 @@
         android:id="@+id/bodytextView"
         android:layout_width="195dp"
         android:layout_height="84dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
         android:background="#F1CBCB"
         android:padding="5dp"
-        android:textColor="@color/black"
 
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
